Update download links

--- a/.ci/windows-build.yml
+++ b/.ci/windows-build.yml
@@ -3,7 +3,7 @@ steps:
       git clone --recurse-submodules https://github.com/tiltedphoques/TiltedCore.git ../TiltedCore
     displayName: Clone TiltedCore
 
-  - pwsh: Invoke-WebRequest https://download.skyrim-together.com/DXSDK.zip -OutFile DXSDK.zip
+  - pwsh: Invoke-WebRequest https://download.skyrim-together.com/tiltedphoques/public/DXSDK.zip -OutFile DXSDK.zip
     displayName: Download DirectX SDK
 
   - pwsh: Expand-Archive -Path DXSDK.zip -DestinationPath DXSDK
